# meta-automation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  Cargo.toml  Dockerfile  README.md
backend/src/: main.rs
frontend/: .env.example  README.md  index.html
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/auth/: ConnectGate.jsx  PasswordGate.jsx
frontend/src/components/common/: BrandHeader.jsx  ConfirmDialog.jsx  Modal.jsx  Toast.jsx
frontend/src/components/dashboard/: Header.jsx  LiveLogs.jsx  RuleCard.jsx  RuleFormModal.jsx  RulesList.jsx  SidebarHelp.jsx
frontend/src/services/: api.js
